--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
 before_install:
   - export DJANGO_SETTINGS_MODULE=example.example.settings
 
-script: python run_tests
+script: python example/manage.py test tests
 
 
