--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ python:
   - "3.4"
   - "3.5"
 
-before_install:
-  - export DJANGO_SETTINGS_MODULE=example.example.settings
-
-script: python example/manage.py test tests
+script: sh run_tests.sh
 
 
