Added support for Django Rest Framework Authentication through yaml

--- a/example/exampleapp/yaml/apis.yaml
+++ b/example/exampleapp/yaml/apis.yaml
@@ -2,7 +2,10 @@
 id: api1
 name: Test API
 url: api1
-
+authentication_classes:
+    - SessionAuthentication
+    - BasicAuthentication
+    - TokenAuthentication
 query: >
     select name, sql, 5 as num, 123 as some_column from sqlite_master limit 4;
 ---
