Permission_classes added from yaml, Test cases added

--- a/tests/test_apis.yaml
+++ b/tests/test_apis.yaml
@@ -19,5 +19,7 @@ authentication_classes:
     - SessionAuthentication
     - BasicAuthentication
     - TokenAuthentication
+permission_classes:
+    - IsAuthenticated
 query: >
     select name, sql, 5 as num, 123 as some_column from sqlite_master limit 4;
