--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -63,10 +63,11 @@
     "font-awesome": "^4.6.3",
     "imports-loader": "^0.6.5",
     "jquery": "~3.1.1",
+    "js-yaml": "^3.7.0",
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
-    "react-dom": "^15.4.1",
     "react-bootstrap": "^0.30.6",
+    "react-dom": "^15.4.1",
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
     "react-tag-input": "^4.4.0",
