--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -59,14 +59,15 @@
     "bootstrap-loader": "^1.0.10",
     "bootstrap-sass": "~3.3.7",
     "brace": "^0.9.0",
+    "deep-equal": "^1.0.1",
     "filesaver.js-npm": "^1.0.1",
     "font-awesome": "^4.6.3",
     "imports-loader": "^0.6.5",
     "jquery": "~3.1.1",
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
-    "react-dom": "^15.4.1",
     "react-bootstrap": "^0.30.6",
+    "react-dom": "^15.4.1",
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
     "react-tag-input": "^4.4.0",
