--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -71,8 +71,7 @@
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
     "react-tag-input": "^4.4.0",
-    "resolve-url-loader": "^1.4.3",
-    "yamljs": "^0.2.8"
+    "resolve-url-loader": "^1.4.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
