--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -65,16 +65,15 @@
     "imports-loader": "^0.6.5",
     "jquery": "~3.1.1",
     "js-yaml": "^3.7.0",
+    "lodash.flow": "^3.3.0",
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
-    "resolve-url-loader": "^1.4.3",
-    "lodash.flow": "^3.3.0",
-    "react-dnd": "^2.0.2",
-    "react-dnd-html5-backend": "^2.0.0"
+    "resolve-url-loader": "^1.4.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
