--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -70,6 +70,7 @@
     "react-ace": "^4.0.0",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.4.1",
+    "react-resizable-and-movable": "^3.0.0",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
