--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -66,6 +66,7 @@
     "jquery": "~3.1.1",
     "js-yaml": "^3.7.0",
     "lodash.flow": "^3.3.0",
+    "moment": "^2.16.0",
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
     "react-bootstrap": "^0.30.6",
@@ -74,7 +75,8 @@
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
-    "resolve-url-loader": "^1.4.3"
+    "resolve-url-loader": "^1.4.3",
+    "react-datetime": "^2.6.7"
   },
   "scripts": {
     "start": "node scripts/start.js",
