--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -70,13 +70,14 @@
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
     "react-bootstrap": "^0.30.6",
+    "react-color": "^2.10.0",
+    "react-datetime": "^2.6.7",
     "react-dom": "^15.4.1",
     "react-resizable-and-movable": "^3.0.0",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
     "react-table": "^3.1.2",
-    "resolve-url-loader": "^1.4.3",
-    "react-datetime": "^2.6.7"
+    "resolve-url-loader": "^1.4.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
