--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -69,6 +69,7 @@
     "moment": "^2.16.0",
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.6",
     "react-color": "^2.10.0",
     "react-datetime": "^2.6.7",
