--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ python:
   - "3.4"
   - "3.5"
 
+env:
+  - TRAVIS_NODE_VERSION="5.10.1"
+
+install:
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - npm install
+
 services:
   - mysql
 
