--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -74,6 +74,7 @@
     "react-color": "^2.10.0",
     "react-datetime": "^2.6.7",
     "react-dom": "^15.4.1",
+    "react-notification-badge": "^1.3.0",
     "react-resizable-and-movable": "^3.0.0",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
