--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -73,6 +73,8 @@
     "react-bootstrap": "^0.30.6",
     "react-color": "^2.10.0",
     "react-datetime": "^2.6.7",
+    "react-dnd": "^2.2.3",
+    "react-dnd-html5-backend": "^2.2.3",
     "react-dom": "^15.4.1",
     "react-notification-badge": "^1.3.0",
     "react-resizable-and-movable": "^3.0.0",
