--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -67,11 +67,12 @@
     "js-yaml": "^3.7.0",
     "lodash.flow": "^3.3.0",
     "moment": "^2.16.0",
-    "react": "^15.3.2",
+    "react": "^15.4.2",
     "react-ace": "^4.0.0",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.6",
     "react-color": "^2.10.0",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-datetime": "^2.6.7",
     "react-dnd": "^2.2.3",
     "react-dnd-html5-backend": "^2.2.3",
