--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,11 @@
-appdirs==1.4.3
-arrow==0.8.0
-dj-database-url==0.4.2
 Django==1.10.2
-django-cors-headers==1.2.2
 djangorestframework==3.5.1
-gunicorn==19.6.0
-Jinja2==2.9.5
-jinjasql==0.1.6
-MarkupSafe==1.0
-MySQL-python==1.2.5
-packaging==16.8
+jinjasql==0.1.4
+django-cors-headers==1.2.2
+PyYAML>=3
+arrow==0.8.0
 psycopg2==2.6.2
-pyparsing==2.2.0
-python-dateutil==2.6.0
-PyYAML==3.12
-six==1.10.0
-squealy==0.1.7
+dj-database-url==0.4.2
+MySQL-python==1.2.5
+gunicorn==19.6.0
 whitenoise==3.3.0
