--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+coverage==4.0.3
 Django==1.10.2
 djangorestframework==3.5.1
+django-nose==1.4.4
 jinjasql==0.1.4
 django-cors-headers==1.2.2
 PyYAML>=3
