--- a/app.json
+++ b/app.json
@@ -22,6 +22,22 @@
     "JWT_KEY": {
       "description": " This is the shared private key that will be used to decode the JWT token. This is required for optionally enabling JWT Authentication mechanism that would enable the user to login via an access token parameter in the url or request body. Refer the squealy documentation for more information on setting up JWT Authentication.",
       "required": false
+    },
+    "EMAIL_HOST": {
+      "description": "Email host for sending emails. Example - smtp.gmail.com",
+      "required": false
+    },
+    "EMAIL_HOST_USER": {
+      "description": "Sender's email address",
+      "required": false
+    },
+    "EMAIL_HOST_PASSWORD": {
+      "description": "Password for sender's email address",
+      "required": false
+    },
+    "EMAIL_PORT": {
+      "description": "Port for the email host",
+      "required": false
     }
   }
 }
