--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "logo": "https://github.com/hashedin/squealy/blob/master/squealy/static/media/logo.71a19eb7.png",
   "keywords": ["javascript", "googlecharts", "django", "python", "dashboard", "API"],
   "scripts": {
-    "postdeploy": "python example/manage.py migrate"
+    "postdeploy": "python manage.py migrate"
   },
   "env": {
     "QUERY_DB": {
