--- a/app.json
+++ b/app.json
@@ -37,10 +37,11 @@
     },
     "AWS_DEFAULT_REGION": {
       "description": "(Optional) AWS region for AWS Athena. By default, us-east-1 will be used.",
+      "value": "us-east-1",
       "required": false
     },
     "EMAIL_HOST": {
-      "description": "Email host for sending emails. Example - smtp.gmail.com",
+      "description": "(Optional) The following settings are required for setting up scheduled reports sent over emails. Enter the Email HostName here. Example - smtp.gmail.com",
       "required": false
     },
     "EMAIL_HOST_USER": {
