--- a/squealy/squealy-web/package.json
+++ b/squealy/squealy-web/package.json
@@ -73,6 +73,7 @@
     "react-copy-to-clipboard": "^4.2.3",
     "react-datetime": "^2.6.7",
     "react-dom": "^15.4.1",
+    "react-loading": "0.0.9",
     "react-notification-badge": "^1.3.0",
     "react-select": "^1.0.0-rc.2",
     "resolve-url-loader": "^1.4.3"
