Fixing logo in app.json

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Squealy",
   "description": "Write SQL, Create APIs",
   "repository": "https://github.com/hashedin/squealy",
-  "logo": "https://github.com/hashedin/squealy/blob/master/squealy/static/media/logo.71a19eb7.png",
+  "logo": "https://github.com/hashedin/squealy/blob/phase-2/squealyproj/static/images/squealy-logo.png?raw=true",
   "keywords": ["javascript", "googlecharts", "django", "python", "dashboard", "API"],
   "scripts": {
     "postdeploy": "python manage.py migrate"
